# ITL

./: .project  CMakeLists.txt  COPYRIGHT  Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  makefile  makefile.in  user_defs.mk
autom4te.cache/: output.0  requests  traces.0
doc/: Doxyfile
doc/html/: ITL__base_8cpp.html  ITL__base_8cpp_source.html  ITL__base_8h.html  ITL__base_8h_source.html  ITL__cell_8h.html  ITL__cell_8h_source.html  ITL__datastore_8h.html  ITL__datastore_8h_source.html  ITL__entropy_8h.html  ITL__entropy_8h_source.html  ITL__entropycore_8cpp.html  ITL__entropycore_8cpp_source.html  ITL__entropycore_8h.html  ITL__entropycore_8h_source.html  ITL__field_8h.html  ITL__field_8h_source.html  ITL__field__regular_8h.html  ITL__field__regular_8h_source.html  ITL__field__unstructured_8h.html  ITL__field__unstructured_8h_source.html  ITL__globalentropy_8h.html  ITL__globalentropy_8h_source.html  ITL__grid_8h.html  ITL__grid_8h_source.html  ITL__grid__regular_8h.html  ITL__grid__regular_8h_source.html  ITL__grid__tetrahedral_8h.html  ITL__grid__tetrahedral_8h_source.html  ITL__grid__unstructured_8h.html  ITL__grid__unstructured_8h_source.html  ITL__header_8h.html  ITL__header_8h_source.html  ITL__histogram_8cpp.html  ITL__histogram_8cpp_source.html  ITL__histogram_8h.html  ITL__histogram_8h_source.html  ITL__histogramconstants_8h.html  ITL__histogramconstants_8h_source.html  ITL__ioutil_8h.html  ITL__ioutil_8h_source.html  (+108 more)
doc/latex/: ITL__base_8cpp.tex  ITL__base_8h.tex  ITL__cell_8h.tex  ITL__datastore_8h.tex  ITL__entropy_8h.tex  ITL__entropycore_8cpp.tex  ITL__entropycore_8h.tex  ITL__field_8h.tex  ITL__field__regular_8h.tex  ITL__field__unstructured_8h.tex  ITL__globalentropy_8h.tex  ITL__grid_8h.tex  ITL__grid__regular_8h.tex  ITL__grid__tetrahedral_8h.tex  ITL__grid__unstructured_8h.tex  ITL__header_8h.tex  ITL__histogram_8cpp.tex  ITL__histogram_8h.tex  ITL__histogramconstants_8h.tex  ITL__ioutil_8h.tex  ITL__localentropy_8h.tex  ITL__localjointentropy_8h.tex  ITL__statutil_8h.tex  ITL__tetrahedron_8h.tex  ITL__util_8h.tex  ITL__vectormatrix_8cpp.tex  ITL__vectormatrix_8h.tex  MainIT__regscalar_8cpp.tex  MainIT__regvector_8cpp.tex  annotated.tex  classITL__Grid__unstructured.eps  classITL__Grid__unstructured.tex  classITL__base.tex  classITL__cell.eps  classITL__cell.tex  classITL__datastore.tex  classITL__entropy.tex  classITL__entropycore.tex  classITL__field.eps  classITL__field.tex  (+30 more)
examples/: README
examples/ApplicationIT_compressionindexing/: CMakeLists.txt
examples/ApplicationIT_diy_blockwise/: CMakeLists.txt  Makefile  flash_bgen_nodiy.args  fuel_bgen_diy.args  fuel_bgen_nodiy.args  nek_bgen_diy.args  plume_bgen_nodiy.args  source_bgen_diy.args  source_bgen_nodiy.args
examples/ApplicationIT_diy_crossvalidate/: CMakeLists.txt  flash_cv_serial.args  flash_cv_serial_optimized.args  isabelpf_cv_bloskwise_parallel_optimized.args  isabelpf_cv_parallel.args  isabelpf_cv_parallel_optimized.args  isabelpf_cv_serial.args  isabelpf_cv_serial_optimized.args  isabelqv_cv_bloskwise_parallel_optimized.args  isabelqv_cv_serial_optimized.args  isabelvec_cv_serial_optimized.args  plume_cv_parallel_optimized.args  plume_cv_serial_optimized.args  plumescalar_cv_bloskwise_parallel_optimized.args  plumescalar_cv_parallel.args  plumescalar_cv_parallel_optimized.args  plumescalar_cv_serial.args  plumescalar_cv_serial_optimized.args  source_cv_serial_optimized.args
examples/ApplicationIT_diy_crossvalidate/src/: MainIT_diy_crossvalidate.cpp
examples/ApplicationIT_diy_global/: ApplicationIT_diy_global  CMakeLists.txt  Makefile  fuel_global_diy.args  plumescalar_global_diy.args  source_global_diy.args
examples/ApplicationIT_diy_local/: CMakeLists.txt  Makefile  fuel_local_diy.args  source_local_diy.args
examples/ApplicationIT_diy_local/src/: MainIT_diy_local.cpp
examples/ApplicationIT_diy_local/src/serial_io/: CMakeLists.txt  Main_reader.cpp  Makefile  ser_io.h
examples/ApplicationIT_diy_local_communication/: CMakeLists.txt  Makefile  fuel_local_diy.args  plume_local_diy.args  plumescalar_len_diy.args  plumescalar_local_diy.args
examples/ApplicationIT_irregularScalar/: CMakeLists.txt
examples/ApplicationIT_nekmoab/: CMakeLists.txt
examples/ApplicationIT_nekmoab/src/: ItlNekMoab.cpp
examples/ApplicationIT_nonspatial/: CMakeLists.txt  fuel_ns.args  (+1 more)
examples/ApplicationIT_regularscalar/: CMakeLists.txt  Makefile  flash_jen_serial.args  fuel_bgen_parallel.args  fuel_gen_parallel.args  fuel_gen_serial.args  fuel_len_parallel.args  fuel_len_serial.args
examples/ApplicationIT_regularscalar/src/: MainIT_regscalar.cpp
examples/ApplicationIT_regularvector/: CMakeLists.txt  Makefile  patch.txt  source_bgen_parallel.args  source_gen_parallel.args  source_gen_serial.args  source_jen_parallel.args  source_jen_serial.args  source_len_parallel.args  source_len_serial.args
examples/ApplicationIT_regularvector/src/: MainIT_regvector.cpp
examples/flash/: CMakeLists.txt  Driver_evolveFlash.F90  Driver_finalizeFlash.F90  Driver_initFlash.F90  Makefile.h  Makefile.h.in  README
include/: CMakeLists.txt  ITL_Range.h  ITL_SphereSpace.h  ITL_base.h  ITL_cell.h  ITL_datastore.h  ITL_entropy.h  ITL_entropycore.h  ITL_field.h  ITL_field_regular.h  ITL_field_unstructured.h  ITL_geodesictree.h  ITL_globalentropy.h  ITL_globaljointentropy.h  ITL_grid.h  ITL_grid_regular.h  ITL_grid_tetrahedral.h  ITL_grid_unstructured.h  ITL_header.h  ITL_histogram.h  ITL_histogramconstants.h  ITL_histogrammapper.h  ITL_ioutil.h  ITL_localentropy.h  ITL_localjointentropy.h  ITL_partition.h  ITL_patch.h  ITL_random_field.h  ITL_spacetree.h  ITL_spacetreenode.h  ITL_statutil.h  ITL_tetrahedron.h  ITL_trianglepatch.h  ITL_util.h  ITL_vectormatrix.h  itl.h
sampledata/: fuel.raw  fuel.vol  source.vec
src/: CMakeLists.txt  ITL_SphereSpace.cpp  ITL_base.cpp  ITL_entropycore.cpp  ITL_histogram.cpp  ITL_random_field.cpp  ITL_spacetreenode.cpp  ITL_trianglepatch.cpp  ITL_vectormatrix.cpp  itl.cpp  libbuf.h  libbuf2d.h  libbuf3d.h  liblog.h  makefile.in
(+127 files in other folders)
